@@ -805,11 +805,13 @@ test -x "$cmd" || {
     BASE64ENCODE=`findAppDef mimencode $PATH mimencode`
     test -x $BASE64ENCODE || {
 	BASE64ENCODE=`findAppDef base64-encode $PATH base64-encode`
-	if [ -x "$UUENCODE" ]; then
-	    if capture "$UUENCODE -m $PASSWD foo"; then
-		BASE64ENCODE="$UUENCODE -m"
+	test -x $BASE64ENCODE || {
+	    if [ -x "$UUENCODE" ]; then
+		if capture "$UUENCODE -m $PASSWD foo"; then
+			BASE64ENCODE="$UUENCODE -m ===="
+		fi
 	    fi
-	fi
+	}
     }
     test -n "$BASE64ENCODE" && Note "Found base64 encoder: $BASE64ENCODE"
 }
