@@ -185,15 +185,16 @@ mimeEncode()
 		# $BASE64ENCODE may contain parameters
 		cmd=`echo $BASE64ENCODE | $SED -e "s/^ *//" -e "s/ .*$//"`
 		if [ -x "$cmd" ]; then
-		    $BASE64ENCODE < $1 2>$ERRORSTO
+		    ($BASE64ENCODE < $1 \
+			| $GREP -v "====$") \
+			2>$ERRORSTO
 		fi
 	    # For compatibility with earlier configurations:
 	    elif [ -x "$MIMENCODE" ]; then
 		$MIMENCODE < $1 2>$ERRORSTO
 	    elif [ -x "$UUENCODE" ]; then
-		$UUENCODE -m $1 $1 \
-		    | $GREP -v "^begin" \
-		    | $GREP -v "^====$" \
+		($UUENCODE -m ==== < $1 \
+		    | $GREP -v "====$") \
 		    2>$ERRORSTO
 	    fi;;
         quoted-printable)
@@ -210,7 +211,7 @@ mimeEncode()
 	    fi;;
         *uue*)
 	    if [ -x "$UUENCODE" ]; then
-		$UUENCODE $1 $1 | grep -E -v "^begin|^====$" 2>$ERRORSTO
+		($UUENCODE ==== < $1 | grep -v "====$") 2>$ERRORSTO
 	    fi;;
         *) cat $1;; # 7bit, 8bit, binary
     esac
